name:                QuestionSort
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/MarcusVoelker/QuestionSort#readme
license:             BSD3
license-file:        LICENSE
author:              Marcus Völker
maintainer:          marcus.voelker@rwth-aachen.de
copyright:           2022 Marcus Völker
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                     CHANGELOG.md

executable QuestionSort
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, containers, transformers
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
